src/objects/GCRChannelProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting contains Channel Properties for GCR widget.</description>
    <fields>
        <fullName>ContentName__c</fullName>
        <description>This field contains value of actual content name of the image/content referred in the side bar of GCR widget</description>
        <label>Content Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResourcePath__c</fullName>
        <description>This field holds path of content in the static resource file</description>
        <label>Resource Path</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StaticResourceName__c</fullName>
        <description>This field holds name of the static resource in which content (icons etc..) has been stored</description>
        <label>Static Resource Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicate if channel is still active and used in the system</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNext__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field holds details of next image (pagination) for the sidebar. This field will be checked only for one record in the system.</description>
        <label>isNext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPrevious__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field holds details of previous image (pagination) for the sidebar. This field will be checked only for one record in the system.</description>
        <label>isPrevious</label>
        <type>Checkbox</type>
    </fields>
    <label>Care Hub Channel Properties</label>
</CustomObject>